<resources>
    <string name="app_name">CounterAgent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Login Screen-->
    <string name="spinner_title">Country</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_user">User Name</string>
    <string name="prompt_uname_possible">User Name/mobile/email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="accountId">Enter account id</string>

    <!-- loading screen -->
    <string name="text_empty_message">There is no data to show.</string>
    <string name="text_loading_message">Now loading..</string>


</resources>
