<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".mvvm.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/hawk_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="SignUp"
            android:textColor="@color/textColorFocused"
            android:textSize="30dp" />

        <RelativeLayout
            android:id="@+id/optionContainer"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/loginAs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="10dp"
                android:text="As"
                android:textColor="@color/textColorFocused"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/userType_spinner"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/loginAs"
                android:layout_marginTop="4dp"
                android:background="@drawable/edittext_background"
                android:prompt="@string/spinner_title" />

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="10dp"
                android:text="AccountId"
                android:textColor="@color/textColorFocused"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/accountId"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/account"
                android:layout_marginTop="4dp"
                android:textSize="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/accountId" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userContainer"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/edittextBorderColor"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/userLabor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/prompt_user"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/edittextBorderColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailContainer"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userContainer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/edittextBorderColor"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/prompt_email"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/edittextBorderColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordContainer"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailContainer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/edittextBorderColor"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/edittextBorderColor" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/countryContainer"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordContainer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <Spinner
                    android:id="@+id/countries_spinner"
                    android:layout_width="80dp"
                    android:layout_height="45dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_background"
                    android:prompt="@string/spinner_title" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneContainer"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/countries_spinner"
                    android:textColorHint="@color/edittextBorderColor"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/countries_spinner"
                        android:background="@drawable/edittext_background"
                        android:hint="Mobile No"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:textColor="@color/edittextBorderColor"
                        android:textColorHint="@color/edittextBorderColor" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <EditText
                android:id="@+id/addres"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/countryContainer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:gravity="top|left"
                android:hint="Please enter your address here"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@id/addres"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_background"
                android:imeActionId="@+id/sign_up"
                android:text="@string/action_sign_up_short"
                android:layout_marginBottom="10dp"
                android:textColor="@drawable/text_selector"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
