<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/textColorWhite"
        android:gravity="center_horizontal"
        tools:context=".mvvm.view.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hawk_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Login"
                android:textColor="@color/textColorFocused"
                android:textSize="30dp" />

            <RelativeLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:id="@+id/optionContainer"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/loginAs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="As"
                        android:textColor="@color/textColorFocused"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/userType_spinner"
                        android:layout_width="140dp"
                        android:layout_height="45dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/loginAs"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edittext_background"
                        android:prompt="@string/spinner_title" />

                    <TextView
                        android:id="@+id/loginwith"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="6dp"
                        android:text="With"
                        android:textColor="@color/textColorFocused"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/top_spinner"
                        android:layout_width="140dp"
                        android:layout_height="45dp"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/loginwith"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edittext_background"
                        android:prompt="@string/spinner_title" />
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userContainer"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/optionContainer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/edittextBorderColor"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <AutoCompleteTextView
                        android:id="@+id/userLabor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/prompt_user"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/edittextBorderColor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailContainer"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userContainer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/edittextBorderColor"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/edittextBorderColor" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_below="@+id/emailContainer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/btn_background"
                    android:imeActionId="@+id/sign_in"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@drawable/text_selector"
                    android:textStyle="bold" />


                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/login_button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/signintext"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="Don't have account? Please signup here"
                    android:textColor="@color/textColorFocused" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/signintext"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_background"
                    android:imeActionId="@+id/sign_up"
                    android:text="@string/action_sign_up_short"
                    android:textColor="@drawable/text_selector"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>
